--- a/client/www/templates/login.html
+++ b/client/www/templates/login.html
@@ -10,7 +10,7 @@
         <input type="password">
       </label>
     </div>
-    <button class="button button-block button-positive">
+    <button class="button button-block button-positive" ui-sref="profile">
       Sign In
     </button>
 
