--- a/client/www/templates/showGoal.html
+++ b/client/www/templates/showGoal.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Your Goals" >
   <ion-content class="has-header">
+    <ion-list>
+      <ion-item ng-repeat="item in issues">
+        Hello, {{item}}!
+      </ion-item>
+    </ion-list>
 
 
 
